--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,7 @@
   padding: 0;
   box-sizing: border-box;
   color: #333333;
+  font-size: 12px;
 }
 
 section {
@@ -12,7 +13,7 @@ section {
 
 /* Generic classes */
 .bars {
-  margin: 10px;
+  margin: 0 5px;
   padding: 20px;
   border-radius: 5px;
   background-color: #e3301c;
@@ -23,6 +24,7 @@ section {
   text-decoration: none;
   color: #ffffff;
   padding: 5px 0;
+  text-transform: uppercase;
 }
 
 /* Classes */
@@ -34,15 +36,62 @@ section {
 }
 
 .header-logos img {
-  width: 80px;
+  width: 60px;
+}
+
+.hamburger-menu {
+  display: flex;
+  flex-direction: column;
+}
+
+.menu-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.serch-bar {
+  width: 40%;
+  background-color: #fff;
+  padding: 10px 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  border-radius: 5px;
+}
+
+.serch-bar p {
+  margin: 0 10px;
+  font-size: 0.8em;
+  opacity: 0.3;
+}
+
+.hamburger-menu span {
+  display: inline-block;
+  width: 20px;
+  height: 2px;
+  margin: 2px 0;
+  background-color: #fff;
+  border-radius: 5px;
 }
 
 .nav-menu ul {
-  margin: 0;
+  border-top: 2px dotted #fff;
+  padding-top: 20px;
+  margin-top: 20px;
+  display: flex;
+  flex-direction: column;
+}
+
+.drop > .toggle-menu {
+  display: none;
 }
 
 .banner {
   background-image: url('../images/consulteasituacaobilhete2.png');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
   height: 300px;
   padding: 0;
 }
@@ -135,10 +184,6 @@ section {
   font-size: 0.8em;
 }
 
-.informations {
-  border-bottom: 1px solid #e3301c;
-}
-
 .informations h2 {
   color: #e3301c;
   font-size: 1.5em;
@@ -188,4 +233,31 @@ section {
   text-align: center;
   padding: 10px;
   min-width: 200px;
+}
+
+.footer-1 {
+  background-color: #333333;
+  padding: 30px 0;
+}
+
+.footer-2 {
+  background-color: #ccc;
+  padding: 30px 0;
+}
+
+.footer-logos {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.footer-logos img {
+  width: 80px;
+  margin: 0 20px 50px 20px;
+}
+
+.footer-information p {
+  text-align: center;
+  margin: 2px 0;
+  font-weight: 700
 }
