--- a/css/styles.css
+++ b/css/styles.css
@@ -12,6 +12,11 @@ section {
   padding: 30px 10px;
 }
 
+#engt-launcher-button {
+  box-shadow: 1px 2px 8px #333333;
+  border-radius: 50%;
+}
+
 /* Generic classes */
 .bars {
   margin: 0 5px;
